--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -214,10 +214,10 @@
             		<div class="call-to-action">
                 	<h2>¡COMIENZA YA!</h2>
                 	<p class="text-faded">Porque nuestra salud es lo que nos ayuda a disfrutar la vida día con día, por eso y más, es importante mejorar tu condición física, y que mejor manera de hacerlo junto con Escuela FIT.</p>
-                    <br></br> <br></br>
-               		<a href="{% url 'login' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:10px"> Iniciar sesión </a><br>
-
-               		</br><a href="{% url 'signup' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
+                    <br> <br>
+               		<a href="{% url 'auth_login' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:10px"> Iniciar sesión </a>
+                    <br>
+                    <a href="{% url 'registration_register' %}" class="btn btn-default btn-xl sr-button btn-right" style="margin-left:15px"> Crear una Cuenta</a>
                	</div>
               </div>
             </div>
